# te-pai-mps

./: LICENSE  README.md  config.json  plot_combined_fig34.py  plot_protocol_sketch.py  plot_protocol_sketch_v2.py  plot_style.py  requirements.txt  run_bond_dimension.py  run_error_testing.py  run_experiment.py  run_resource_estimation.py  run_sample_tracking.py  run_truncation_comparison.py  run_truncation_comparison_multi.py  runner.py
data/nq100_chi16_j0.10_seed0_T3.00_dt0.10_X0_plus_flip/: tepai_d1024_N50_S1_tstart0.00.csv  tepai_d1024_N50_S1_tstart1.00.csv  tepai_d1024_N50_S1_tstart2.00.csv  trotter_N20_adaptiveTrue.csv
data/nq100_chi16_j0.10_seed0_T4.00_dt0.10_X0_plus_flip/: tepai_d4096_N1000_S10_tstart3.00.csv  trotter_N20_adaptiveTrue.csv
data/nq100_chi16_j0.10_seed0_T5.00_dt0.10_X0_plus_flip/: tepai_d4096_N1000_S10_tstart0.00.csv  trotter_N20_adaptiveTrue.csv
data/nq10_chi16_j0.10_seed0_T1.00_dt0.10_X0_plus_flip/: bd_tepai_d1024_N1000_S100_tstart0.00.csv  bd_tepai_d128_N1000_S100_tstart0.00.csv  bd_tepai_d2048_N1000_S100_tstart0.00.csv  bd_tepai_d2048_N1000_S100_tstart0.50.csv  bd_tepai_d256_N1000_S100_tstart0.00.csv  bd_tepai_d512_N1000_S100_tstart0.00.csv  trotter_N1000_adaptiveFalse.csv
data/nq50_chi8_j2.00_seed0_T2.50_dt0.10_X0_plus_flip/: re_summary.csv  (+8 more)
mps-te-pai/: example.py  pyproject.toml
mps-te-pai/src/mps_tepai/: __init__.py  circuit_gen.py  hamiltonian.py  mps_runner.py  pai.py  sampling.py
mps-te-pai/src/mps_tepai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mps-te-pai/tests/: test_circuits.py  test_package.py
(+8 files in other folders)
