[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mps-tepai"
version = "0.1.0"
description = "MPS-based Time-Evolution via Probabilistic Approximate Identity (TE-PAI)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "quimb>=1.8",
    "numba>=0.58",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
